# OpenGLSphere

./: CMakeLists.txt  Readme.md
src/: BasicMaterial.cpp  BasicMaterial.h  CMakeLists.txt  Camera.cpp  Camera.h  LitMaterial.cpp  LitMaterial.h  Main.cpp  MainWindow.cpp  MainWindow.h  Material.cpp  Material.h  ShaderProgram.cpp  ShaderProgram.h  Sphere.cpp  Sphere.h  basicShader.frag  basicShader.vert  litShader.frag  litShader.vert
